--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
 {% if site.google_analytics and jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
+{% include matomo.html %}
