--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <script type="text/javascript">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(["setCookieDomain", "*.gitpage.reccachao.net"]);
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
@@ -13,6 +14,7 @@
   })();
 </script>
 <!-- End Matomo Code -->
+
 {% if site.google_analytics and jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
