--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+{% include gtm_head.html %}
 {% seo %}
   </head>
 
   <body>
-
+    {% include gtm_body.html %}
     <header>
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
