--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,7 @@
 ---
 ---
 
-@font-face {
-    font-family: "JetBrainsMono";
-    src: url("../assets/JetBrainsMono-Regular.woff2") format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital@0;1&display=swap');
 
 @import "{{ site.theme }}";
 
@@ -18,5 +13,5 @@ body {
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
-  font-family: "JetBrainsMono", Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-family: "JetBrains Mono", Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
