--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,7 @@ body {
   line-height: 1.5;
   font-family: "JetBrains Mono", Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
+
+pre {
+  font-family: "JetBrains Mono", monospace;
+}
