--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,6 @@ body {
   font-family: "JetBrains Mono", Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 }
 
-pre {
+pre code {
   font-family: "JetBrains Mono", monospace;
 }
