--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,6 @@
-
+{% if site.liker_id %}
+<iframe
+  style="width: 100%; max-width: 485px; height: 240px; margin: auto; overflow: hidden; display: block;"
+  src="https://button.like.co/in/embed/{{site.liker_id}}/button?referrer={{ page.url | absolute_url | cgi_escape }}">
+</iframe>
+{% endif %}
